Replace RestEasy with Quarkus REST