@@ -1,14 +1,16 @@
 package com.melloware.lease.analyzer;
 
-import static dev.langchain4j.model.chat.request.ResponseFormatType.JSON;
-
-import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.io.InputStream;
+import java.nio.file.Files;
 import java.util.Base64;
 
-import org.apache.commons.io.IOUtils;
-import org.jboss.resteasy.annotations.providers.multipart.MultipartForm;
+import org.eclipse.microprofile.openapi.annotations.Operation;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.jboss.resteasy.reactive.RestForm;
+import org.jboss.resteasy.reactive.multipart.FileUpload;
 
 import dev.langchain4j.data.message.PdfFileContent;
 import dev.langchain4j.data.message.TextContent;
@@ -17,10 +19,10 @@ import dev.langchain4j.model.chat.ChatLanguageModel;
 import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.request.ChatRequestParameters;
 import dev.langchain4j.model.chat.request.ResponseFormat;
+import dev.langchain4j.model.chat.request.ResponseFormatType;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.service.output.JsonSchemas;
 import jakarta.inject.Inject;
-import jakarta.validation.Valid;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
@@ -50,19 +52,19 @@ public class LeaseAnalyzerResource {
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     @Produces(MediaType.TEXT_PLAIN)
     @Path("/upload")
-    public String upload(@MultipartForm @Valid final LeaseUploadRequest fileUploadRequest) {
-        final String fileName = fileUploadRequest.getFileName();
+    @Operation(summary = "Upload and analyze a lease document", description = "Uploads a PDF lease document and analyzes it using Google Gemini AI to extract key information")
+    @RequestBody(required = true, content = @Content(mediaType = MediaType.MULTIPART_FORM_DATA, schema = @Schema(implementation = FileUpload.class)))
+    @APIResponse(responseCode = "200", description = "Successfully analyzed lease document", content = @Content(mediaType = MediaType.TEXT_PLAIN, schema = @Schema(implementation = LeaseReport.class)))
+    public String upload(@RestForm("file") FileUpload fileUploadRequest) {
+        final String fileName = fileUploadRequest.fileName();
         log.infof("Uploading file: %s", fileName);
-        final InputStream data = fileUploadRequest.getData();
 
-        ByteArrayInputStream inputStream;
         try {
             // Convert input stream to byte array for processing
-            inputStream = new ByteArrayInputStream(
-                    IOUtils.toBufferedInputStream(data).readAllBytes());
+            byte[] fileBytes = Files.readAllBytes(fileUploadRequest.filePath());
 
             // Encode PDF content to base64 for transmission
-            String documentEncoded = Base64.getEncoder().encodeToString(inputStream.readAllBytes());
+            String documentEncoded = Base64.getEncoder().encodeToString(fileBytes);
 
             // Create user message with PDF content for analysis
             UserMessage userMessage = UserMessage.from(
@@ -78,9 +80,11 @@ public class LeaseAnalyzerResource {
                     .build();
 
             log.info("Google Gemini analyzing....");
+            long startTime = System.currentTimeMillis();
             ChatResponse chatResponse = model.chat(chatRequest);
+            long endTime = System.currentTimeMillis();
             String response = chatResponse.aiMessage().text();
-            log.infof("Google Gemini analyzed: %s", response);
+            log.infof("Google Gemini analyzed in %d ms: %s", (endTime - startTime), response);
 
             return response;
         } catch (IOException e) {
@@ -96,7 +100,7 @@ public class LeaseAnalyzerResource {
      */
     private static ResponseFormat responseFormatFrom(Class<?> clazz) {
         return ResponseFormat.builder()
-                .type(JSON)
+                .type(ResponseFormatType.JSON)
                 .jsonSchema(JsonSchemas.jsonSchemaFrom(clazz).get())
                 .build();
     }
